// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots System/Blocks/ButtonWithInput Basic Input with a Button Example 1`] = `
.c1 {
  font-size: 0.7rem;
  font-weight: 700;
  -webkit-letter-spacing: .05em;
  -moz-letter-spacing: .05em;
  -ms-letter-spacing: .05em;
  letter-spacing: .05em;
  text-transform: uppercase;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-radius: .25rem;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  border-style: none;
  color: #fff;
  background-color: #2165e5;
}

.c0 {
  font-size: 0.7rem;
  color: #6d6d68;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  border-style: none;
  height: 2rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  min-width: 10rem;
}

.c0::-webkit-input-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0::-moz-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0:-ms-input-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0::placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

<div>
  <input
    className="c0"
    onChange={[Function]}
    placeholder="Input your email"
  />
  <button
    className="c1"
    onClick={[Function]}
  >
    Hello World button with input
  </button>
</div>
`;

exports[`Storyshots System/Blocks/Grid Basic Page with 7 2/3/2 cols 1`] = `
.c1 {
  width: 100%;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
}

.c2 {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.22);
  height: 10rem;
}

@media (min-width:600px) and (max-width:959px) {
  .c1 {
    width: calc(33.33333333333333% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c1 {
    width: calc(33.33333333333333% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1920px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c3 {
    width: calc(50% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c3 {
    width: calc(50% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c3 {
    width: calc(25% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1920px) {
  .c3 {
    width: calc(25% - 20px);
    margin-left: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    span={2}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c3"
    span={3}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={2}
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots System/Blocks/Grid Basic Page with 7 2/3/2 cols and custom style passed in 1`] = `
.c1 {
  width: 100%;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
}

.c2 {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.22);
  height: 10rem;
}

@media (min-width:600px) and (max-width:959px) {
  .c1 {
    width: calc(33.33333333333333% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c1 {
    width: calc(33.33333333333333% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1920px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c3 {
    width: calc(50% - 20px);
    margin-left: 20px;
    margin-bottom: 2rem;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c3 {
    width: calc(50% - 20px);
    margin-left: 20px;
    margin-bottom: 2rem;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c3 {
    width: calc(25% - 20px);
    margin-left: 20px;
    margin-bottom: 2rem;
  }
}

@media (min-width:1920px) {
  .c3 {
    width: calc(25% - 20px);
    margin-left: 20px;
    margin-bottom: 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    span={2}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c3"
    span={3}
    style={
      Object {
        "marginBottom": "2rem",
      }
    }
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={2}
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots System/Blocks/Grid Basic Page with 7 cols 1`] = `
.c1 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
}

.c2 {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.22);
  height: 10rem;
}

@media (min-width:600px) and (max-width:959px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c1 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1920px) {
  .c1 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots System/Blocks/Grid Basic Page with 12 cols 1`] = `
.c1 {
  width: 100%;
}

.c3 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
}

.c2 {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.22);
  height: 10rem;
}

@media (min-width:600px) and (max-width:959px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c1 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c1 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:1920px) {
  .c1 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c3 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
    margin-bottom: 20px;
  }
}

@media (min-width:960px) and (max-width:1279px) {
  .c3 {
    width: calc(16.666666666666664% - 20px);
    margin-left: 20px;
    margin-bottom: 20px;
  }
}

@media (min-width:1280px) and (max-width:1919px) {
  .c3 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
    margin-bottom: 20px;
  }
}

@media (min-width:1920px) {
  .c3 {
    width: calc(8.333333333333332% - 20px);
    margin-left: 20px;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c3"
    span={1}
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
    span={1}
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots System/Elements/Button Basic Button Example 1`] = `
.c0 {
  font-size: 0.7rem;
  font-weight: 700;
  -webkit-letter-spacing: .05em;
  -moz-letter-spacing: .05em;
  -ms-letter-spacing: .05em;
  letter-spacing: .05em;
  text-transform: uppercase;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-radius: .25rem;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  border-style: none;
  color: #fff;
  background-color: #2165e5;
}

<button
  className="c0"
  onClick={[Function]}
>
  Hello World Button
</button>
`;

exports[`Storyshots System/Elements/CheckBox Basic CheckBox Example 1`] = `
.c5 {
  fill: none;
  stroke: white;
  stroke-width: 2px;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clippath: inset(50%);
  clippath: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: inline-block;
  width: 16px;
  height: 16px;
  background-color: #6d6d68;
  border-radius: 3px;
  -webkit-transition: all 150ms;
  transition: all 150ms;
}

.c1:focus + .c3 {
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
}

.c3 .c4 {
  visibility: hidden;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <input
    checked={false}
    className="c1 c2"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="c3"
  >
    <svg
      className="c4 c5"
      viewBox="0 0 24 24"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots System/Elements/Input Basic Input Example 1`] = `
.c0 {
  font-size: 0.7rem;
  color: #6d6d68;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23);
  border-style: none;
  height: 2rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  min-width: 10rem;
}

.c0::-webkit-input-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0::-moz-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0:-ms-input-placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

.c0::placeholder {
  color: #a8a4a3;
  -webkit-transition: opacity 500ms;
  transition: opacity 500ms;
}

<input
  className="c0"
  onChange={[Function]}
  placeholder="Your email address"
/>
`;

exports[`Storyshots System/Typography/Headings Basic Header 1 Example 1`] = `
<h1>
  Header level 1
</h1>
`;

exports[`Storyshots System/Typography/Headings Basic Header 2 Example 1`] = `
<h2>
  Header level 2
</h2>
`;

exports[`Storyshots System/Typography/Headings Basic Header 3 Example 1`] = `
<h3>
  Header level 3
</h3>
`;

exports[`Storyshots System/Typography/Headings Basic Header 4 Example 1`] = `
<h4>
  Header level 4
</h4>
`;

exports[`Storyshots System/Typography/Headings Basic Header 5 Example 1`] = `
<h5>
  Header level 5
</h5>
`;

exports[`Storyshots System/Typography/Headings Basic Header 6 Example 1`] = `
<h6>
  Header level 6
</h6>
`;

exports[`Storyshots System/Typography/Text Basic Button Example 1`] = `
<button>
  Sample Button Text
</button>
`;

exports[`Storyshots System/Typography/Text Basic Paragraph Example 1`] = `
<p>
  Omnis id corrupti iusto sit similique qui amet.
</p>
`;
